# Financial-Research-Copilot

./: Dockerfile  Dockerfile.ui  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/sample/: AAPL_earnings_transcript_Q4FY2024.txt  fed_monetary_policy_q3_2024.txt
docs/: architecture.md  deployment.md
scripts/: benchmark.py  build_index.sh
src/: __init__.py  cli.py
src/agents/: __init__.py  analyst_agent.py  citation_agent.py  research_agent.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: health.py  ingest.py  query.py
src/ingestion/: __init__.py  chunker.py  embedder.py  fred_fetcher.py  pipeline.py  sec_fetcher.py
src/retrieval/: __init__.py  bm25_retriever.py  faiss_store.py  hybrid.py  reranker.py
src/ui/: app.py
src/utils/: __init__.py  cache.py  config.py  logger.py  metadata_db.py  metrics.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_chunker.py  test_hybrid_retrieval.py  test_schemas.py
