[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-research-copilot"
version = "1.0.0"
description = "Hybrid RAG-based financial research assistant for SEC filings, earnings transcripts, and macro reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["rag", "llm", "finance", "sec", "langchain", "faiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
frc = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff (linting + import sorting) ──────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501", "B008", "N805"]
exclude = ["data/", "docs/", ".venv/"]

[tool.ruff.isort]
known-first-party = ["src"]

# ── Black ─────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ── MyPy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests (no I/O)",
    "integration: integration tests (require API keys)",
    "slow: tests taking > 10s",
]

# ── Coverage ─────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["src/cli.py", "tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
